Fixed copyright issue on tablet style

--- a/css/main.css
+++ b/css/main.css
@@ -244,7 +244,6 @@ footer .social-icons p i {
   font-size: 1.3125em;
 }
 
-
 footer .copyright {
   margin: 20px 0;
 }
@@ -619,7 +618,7 @@ input[type=button] {
     }
     
     footer .copyright {
-      width: 24%;
+      width: 50%;
     }
 
 
